--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^11.5.0",
     "discord.js-commando": "^0.10.0",
     "opusscript": "0.0.6",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "ytdl-core": "^0.29.2"
   }
 }
