--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^11.5.0",
     "discord.js-commando": "^0.10.0",
+    "ffmpeg": "0.0.4",
     "opusscript": "0.0.6",
     "request": "^2.88.0",
     "ytdl-core": "^0.29.2"
